[metadata]
name = DocCron
version = 1.4.0-rc1
download_url = https://github.com/roniemartinez/DocCron/tarball/1.4.0
description = Schedule with Docstrings
long_description = file:README.md
description-file = README.md
long_description_content_type = text/markdown
author = Ronie Martinez
author_email = ronmarti18@gmail.com
url = https://github.com/roniemartinez/DocCron
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython

[options]
packages =
    doccron
install_requires =
    pytz==2019.3
    tzlocal==2.0.0

[bdist_wheel]
universal = 1

[pycodestyle]
max-line-length = 120
statistics = True

[wheel]
universal = 1